--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -8,6 +8,7 @@
     <input type="text" name="first_name" placeholder="Enter a first name">
     <input type="text" name="last_name" placeholder="Enter a last name">
     <input type="text" name="image_url" placeholder="Provide an image url of this user">
-    <button>Edit User</button>
+    <button class="btn btn-primary">Edit User</button>
+    <a href="/users/{{user.id}}" class="btn btn-danger">Cancel</button>
 </form>
 {% endblock %}
