--- a/templates/user_form.html
+++ b/templates/user_form.html
@@ -8,7 +8,8 @@
     <input type="text" name="first_name" placeholder="Enter a first name">
     <input type="text" name="last_name" placeholder="Enter a last name">
     <input type="text" name="image_url" placeholder="Provide an image url of this user">
-    <button>Add User</button>
+    <button class="btn btn-primary">Add User</button>   
+    <a href="/users" class="btn btn-danger">Cancel</button>
 </form>
 
 {% endblock %}
