--- a/templates/users.html
+++ b/templates/users.html
@@ -1,20 +1,16 @@
 {% extends 'base.html'%}
 {% block title %}Users {% endblock %}
 {% block content%}
+
 <h1> Users</h1>
 <ul>
 {% for user in users%}
 <li>
     <a href='/users/{{user.id}}'>{{user.first_name}} {{user.last_name}}</a> 
-    <!-- <a href='/users/{{user.id}}/edit'>Edit</a> -->
 </li>
 {%endfor%}
 </ul>
-<!-- <h2>Create User</h2>
-<form action="/users/new" method="POST">
-    <input type="text" name="first_name" placeholder="Enter a first name">
-    <input type="text" name="last_name" placeholder="Enter a last name">
-    <input type="text" name="image_url" placeholder="Provide an image url of this user">
-    <button>Add User</button>
-</form> -->
+
+
+<p> <a type="button" class="btn btn-primary"href="/users/new">Add user</a></p>
 {% endblock %}
