added submission requirements, edited buttons

--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -4,11 +4,12 @@
 </ul>
 <h2>Edit User</h2>
 <h3>{{user.first_name}} {{user.last_name}}</h3>
-<form method="POST">
+<form>
     <input type="text" name="first_name" placeholder="Enter a first name">
     <input type="text" name="last_name" placeholder="Enter a last name">
     <input type="text" name="image_url" placeholder="Provide an image url of this user">
-    <button class="btn btn-primary">Edit User</button>
-    <a href="/users/{{user.id}}" class="btn btn-danger">Cancel</button>
+    <button class="btn btn-primary" formmethod="POST">Edit User</button>
+    <button class="btn btn-danger" formaction="/users/{{user.id}}">Cancel</button>
+    <!-- <a href="/users/{{user.id}}" class="btn btn-danger">Cancel</button> -->
 </form>
 {% endblock %}
