--- a/static/app.css
+++ b/static/app.css
@@ -19,3 +19,10 @@ ul {
 .user-info {
     text-align: left;
 }
+.messages .ERROR {
+    background-color:rgba(255, 0, 0, 0.3);
+}
+
+.messages .SUCCESS {
+    background-color: rgba(8, 177, 8, 0.3);
+}
