--- a/templates/base.html
+++ b/templates/base.html
@@ -24,10 +24,24 @@
         </div> 
     </div>   
 </nav>
-<body>
-    {% block content %}
 
-    {% endblock %}
+<body>
+   
+    <main id="content">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        <section class="messages">
+            {% for category,msg in messages %}
+            <p class="{{ category }}">{{msg}}</p>
+            {% endfor %}
+        </section>
+        {% endif %}
+        {% endwith %}
+        
+        {% block content %}
+        {% endblock %}
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </body>
