--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -3,11 +3,11 @@
 {% block content%}
 <h1>{{post.title}}</h1>
 <p>{{post.content}}</p>
-<form method="POST">
+<form>
     <input type="text" name="title" placeholder="Title">
     <input type="text" name="content" placeholder="Content">
-    <button type="submit" class="btn btn-primary">Edit Post</button>
-    <a href="/posts/{{post.id}}" class="btn btn-danger">Cancel</button>
+    <button type="submit" class="btn btn-primary" formmethod="POST">Edit Post</button>
+    <button class="btn btn-danger" formaction="/posts/{{post.id}}">Cancel</button>
 </form>
 
 {% endblock %}
