--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/users">Users</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/tags">Tags</a>
+                    </li> 
                 </ul>
                 
             </div>
