--- a/templates/home.html
+++ b/templates/home.html
@@ -8,5 +8,14 @@
  <h3><a href='/posts/{{post.id}}'>{{post.title}}</a></h3>
  <p>{{post.content}}</p>
  <p> by <a href="/users/{{post.user.id}}">{{post.user.full_name}}</a> at {{post.created_at}}</p>
+ 
+ {% if post.tags %}
+    <p>Tags:
+        {% for tag in post.tags %}
+        <a href='/tags/{{tag.id}}'>{{tag.name}}</a>
+        {% endfor %}
+    </p>
+{% endif %}
+
 {% endfor %}
 {% endblock %}
