--- a/templates/user/form.html
+++ b/templates/user/form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Home {% endblock %}
+{% block title %}New User Form{% endblock %}
 
 {% block content %}
 <h2>Create User</h2>
